--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <!-- HELLO DAUM! -->
 
 <!-- iOS에서는 position:fixed 버그가 있음, 적용하는 사이트에 맞게 position:absolute 등을 이용하여 top,left값 조정 필요 -->
+<header>뻐큐</header>
 <div id="layer" style="display:block;position:fixed;overflow:hidden;z-index:1;-webkit-overflow-scrolling:touch;">
 
 </div>
