test: 테스트 커밋

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     function closeDaumPostcode() {
         // iframe을 넣은 element를 안보이게 한다.
-        element_layer.style.display = 'none';
+        // element_layer.style.display = 'none';
     }
     // sample2_execDaumPostcode()
 
