test: 테스트 커밋

--- a/index.html
+++ b/index.html
@@ -77,11 +77,17 @@
             // document.getElementById("sample2_address").value = addr;
             // 커서를 상세주소 필드로 이동한다.
             // document.getElementById("sample2_detailAddress").focus();
-            console.log(data)
-            console.log(`addr: ${addr}`)
-            console.log(`addr: ${extraAddr}`)
+            
+            // console.log(data)
+            // console.log(`addr: ${addr}`)
+            // console.log(`extra addr: ${extraAddr}`)
+            let addressData = {
+                zoneCode: data.zoneCode,
+                city: data.sido,
+                address: addr
+            }
 
-            window.Bridge.getAddressData(addr)
+            window.Bridge.getAddressData(addressData)
 
             // iframe을 넣은 element를 안보이게 한다.
             // (autoClose:false 기능을 이용한다면, 아래 코드를 제거해야 화면에서 사라지지 않는다.)
