--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             // console.log(`addr: ${addr}`)
             // console.log(`extra addr: ${extraAddr}`)
             let addressData = {
+                addressType: data.jibunAddress ? "J" : "R",
                 zoneCode: data.zonecode,
                 city: data.sido,
                 roadAddress: data.roadAddress,
