test: 테스트 커밋

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             // document.getElementById("sample2_detailAddress").focus();
 
             let addressData = {
-                addressType: data.addressType,
+                addressType: data.userSelectedType,
                 zoneCode: data.zonecode,
                 city: data.sido,
                 roadAddress: data.roadAddress,
