fix: addressData에 buildingName 필드 추가

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
                 city: data.sido,
                 roadAddress: data.roadAddress,
                 jibunAddress: data.jibunAddress,
-                address: addr
+                address: addr,
+                buildingName: data.buildingName
             }
 
             window.Bridge.getAddressData(JSON.stringify(addressData))
